samples/_failures_safe/1761264985_9e5a99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_742a2a9c.c: In function ‘main’:
./samples/SAFE/__tmp_742a2a9c.c:148:5: error: expected declaration or statement at end of input
  148 |     state_init(&ctx);
      |     ^~~~~~~~~~
